add redux, ngrx, refactor using ngrx flow

--- a/angular.json
+++ b/angular.json
@@ -140,5 +140,8 @@
       }
     }
   },
-  "defaultProject": "ithillel"
+  "defaultProject": "ithillel",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
